# magicalapi-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  test_integration.py  tox.ini
.github/workflows/: magicalapi-client.yml  release.yml  tests.yml
examples/: company_data.py  profile_data.py  resume_parser.py  resume_review.py  resume_score.py  webhook_example.py  youtube_seo.py  youtube_suggestions.py  youtube_top_keywords.py
magicalapi/: __init__.py  client.py  errors.py  settings.py
magicalapi/abstractions/: base_service.py
magicalapi/services/: __init__.py  base.py  base_service.py  company_data.py  company_data_service.py  profile_data.py  profile_data_service.py  resume_parser.py  resume_parser_service.py  resume_review_service.py  resume_score.py  resume_score_service.py  youtube_seo.py  youtube_seo_service.py  youtube_suggestions_service.py  youtube_top_keywords.py  youtube_top_keywords_service.py
magicalapi/types/: __init__.py  base.py  company_data.py  profile_data.py  resume_parser.py  resume_review.py  resume_score.py  schemas.py  youtube_seo.py  youtube_suggestions.py  youtube_top_keywords.py
magicalapi/utils/: logger.py
smoke/: test_smoke.py
smoke_test/: conftest.py  test_authentication.py  test_youtube_keywords.py  test_youtube_seo.py
tests/: conftest.py  test_client.py
tests/services/: test_base_service.py  test_company_data_service.py  test_webhook_url.py
tests/types/: test_company_data_type.py  test_profile_data_type.py  test_resume_parser.py  test_resume_parser_type.py  test_resume_review_type.py  test_resume_score.py  test_resume_score_type.py  test_youtube_seo.py  test_youtube_seo_type.py  test_youtube_suggestions_type.py  test_youtube_top_keywords_types.py
