[tool.poetry]
name = "magicalapi"
version = "0.1.0"
description = "a python client to access and work with MagicalAPI.com API services."
authors = ["Amir Aref <amiraref808@gmail.com>"]
readme = "README.md"
repository = "https://github.com/magical-api/python-library"
homepage = "https://github.com/magical-api/python-library"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
tox = "^4.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
faker = "^22.4.0"
pytest-dependency = "^0.6.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
