[tool.poetry]
name = "magicalapi"
version = "1.0.1"
description = "This is a Python client that provides easy access to the MagicalAPI.com services, fully type annotated, and asynchronous."
authors = ["MagicalAPI <info@magicalapi.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/magicalapi/magicalapi-python"
homepage = "https://github.com/magicalapi/magicalapi-python"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.26.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
faker = "^22.4.0"
pytest-dependency = "^0.6.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
tox = "^4.12.1"
ruff = "^0.3.4"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "UP", # pyupgrade
    "I", # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
