[project]
name = "magicalapi"
version = "1.5.1"
description = "This is a Python client that provides easy access to the MagicalAPI.com services, fully type annotated, and asynchronous."
authors = [
    { name = "MagicalAPI", email = "info@magicalapi.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]
dependencies = [
	"httpx>=0.26.0",
	"pydantic>=2.5.3",
	"pydantic-settings>=2.1.0",
]

[project.urls]
Repository = "https://github.com/magicalapi/magicalapi-python"
Homepage = "https://github.com/magicalapi/magicalapi-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "faker>=22.4.0",
    "pytest-dependency>=0.6.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "tox>=4.12.1",
    "ruff>=0.3.4",
    "tox-gh-actions>=3.2.0",
    "tomli>=2.2.1",
    "exceptiongroup>=1.2.2",
    "twine>=6.0.1",
    "pkginfo>=1.12.0",
]

[tool.uv]
package = true


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "UP", # pyupgrade
    "I", # isort
]

